--- a/front-end/src/containers/Authentication/ForgotPassword/styles.scss
+++ b/front-end/src/containers/Authentication/ForgotPassword/styles.scss
@@ -2,17 +2,12 @@
 
 .forgot-password-container {
   min-height: 100vh;
-  padding-bottom: 400px;
-
-  .div-forgot-password-banner {
-    position: relative;
-    height: 465px;
-  }
 
   .div-forgot-password-form {
     position: relative;
     display: flex;
-    margin: -170px 30px 90px 30px;
+    margin: 50px 30px 90px 30px;
+    padding-top: 200px;
 
     .container {
       max-width: 500px !important;
@@ -24,12 +19,8 @@
   }
 
   @media (max-width: 710px) {
-    .div-forgot-password-banner {
-      max-height: 350px;
-    }
-
     .div-forgot-password-form {
-      margin-top: -180px;
+      padding-top: 100px;
       margin-bottom: 40px;
     }
   }
