[FE] introduce inky free font

--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -42,3 +42,8 @@
   font-family: 'Lato-Regular';
   src: url('../assets/fonts/Lato/Lato-Regular.ttf');
 }
+
+@font-face {
+  font-family: 'Inkfree';
+  src: url('../assets/fonts/Inky/Inkfree.ttf');
+}
