--- a/front-end/src/containers/HelpCenter/styles.scss
+++ b/front-end/src/containers/HelpCenter/styles.scss
@@ -47,6 +47,7 @@
       margin-top: 60px;
 
       .span-need-help {
+        font-family: 'Inkfree';
         font-size: 35px;
         color: #333333;
         margin-bottom: 35px;
