[FE] ingredients & collection tags

--- a/front-end/src/containers/Menus/styles.scss
+++ b/front-end/src/containers/Menus/styles.scss
@@ -3,6 +3,7 @@
 .div-menus-container {
   background-color: $extra-light-gray;
   margin-top: 78px;
+  min-height: 100vh;
 
   .div-menus {
     padding: 120px 270px 40px;
