--- a/front-end/src/containers/Root/components/Footer/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/styles.scss
@@ -30,7 +30,7 @@
     .div-footer-middle-logo {
       margin-right: 60px;
       img {
-        height: 55px;
+        height: 46px;
         margin: 60px 0 0 69px;
       }
 
@@ -54,12 +54,13 @@
       margin: 50px 70px 0px 70px;
 
       .footer-middle-links-header {
-        font-size: $footer-secondary-font-size;
+        font-size: $regular-font-size;
         color: #7C7C7C;
         font-family: 'Montserrat-SemiBold';
       }
 
       .footer-middle-link {
+        font-size: $small-font-size;
         color: #AFAFAF;
         margin-top: 10px;
         cursor: pointer;
@@ -78,9 +79,9 @@
         .div-social-link {
           background-position: center;
           background-repeat: no-repeat;
-          width: 36px;
-          height: 36px;
-          margin-right: 20px;
+          width: 30px;
+          height: 30px;
+          margin-right: 15px;
           transition: background-image .25s linear;
         }
   
@@ -118,7 +119,7 @@
       }
 
       @media (max-width: 1300px) {
-        margin: 20px 25px 0 25px;
+        margin: 30px 25px 0 25px;
       }
     }
   }
@@ -139,6 +140,7 @@
         color: #AFAFAF;
         margin-left: 68px;
         cursor: pointer;
+        font-size: $small-font-size;
       }
     }
   }
