--- a/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
+++ b/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
@@ -1,78 +1,61 @@
 @import "../../../../../styles/variables/variables";
 
 .payment-method-info {
-  width: 660px;
-  height: 180px;
-  border-radius: 17px;
-  border: 1px solid #C7C7C7;
-  overflow: hidden;
+  width: 670px;
+  height: 120px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 40px 0 30px;
 
-  .blue {
-    background-color: rgba(1, 93, 175, 0.74);
-  }
+  .div-image-wrapper {
+    width: 80px;
+    
+    .img-payment-method {
+      width: 40px;
+    }
 
-  .orange {
-    background-color: #F79F1A;
-  }
-
-  .cyan {
-    background-color: #009CDE;
-  }
-
-  .payment-method-info-title {
-    height: 90px;
-
-    span {
-      line-height: 90px;
-      font-size: $footer-primary-font-size;
-      margin-left: 30px;
-      color: white;
+    .img-payment-method-long {
+      width: 80px;
     }
   }
 
-  .payment-method-info-content {
-    height: 90px;
+  .div-secret-form {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 0 40px;
+    justify-content: flex-end;
+    flex-grow: 1;
 
-    .div-image-wrapper {
-      width: 80px;
-      text-align: center;
-      
-      .img-payment-method {
-        width: 40px;
-      }
-  
-      .img-payment-method-long {
-        width: 80px;
-      }
+    .img-password {
+      width: 40px;
+      margin-right: 15px;
     }
 
-    .div-secret-form {
-      display: flex;
-      align-items: center;
-      flex-grow: 1;
-      margin-left: 40px;
-
-      .img-password {
-        width: 40px;
-        margin-right: 30px;
-      }
-
-      span {
-        margin-right: 30px;
-        font-size: $small-font-size;
-        font-family: 'Montserrat-Medium';
-      }
-    }
-    
-
-    .span-remove {
-      text-decoration: underline;
+    span {
       font-size: $small-font-size;
-      color: $text-light-gray;
+      font-family: 'Montserrat-Medium';
     }
+  }
+}
+
+.blue {
+  background-color: rgba(1, 93, 175, 0.74);
+
+  .div-secret-form span {
+    color: white;
+  }
+}
+
+.gray {
+  background-color: #F9F9F9;
+  border: 1px solid $text-light-gray;
+}
+
+.black {
+  background-color: #009CDE;
+
+  .div-secret-form span {
+    color: white;
   }
 }
