[FE] payment card gradient background

--- a/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
+++ b/front-end/src/containers/Settings/PaymentMethod/components/PaymentMethodInfo/styles.scss
@@ -40,7 +40,7 @@
 }
 
 .blue {
-  background-color: rgba(1, 93, 175, 0.74);
+  background-image: linear-gradient(to right, #28496C, #2684BD);
 
   .div-secret-form span {
     color: white;
@@ -53,7 +53,7 @@
 }
 
 .black {
-  background-color: #009CDE;
+  background-image: linear-gradient(to right, #3B3B3B, #686565);
 
   .div-secret-form span {
     color: white;
