--- a/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
+++ b/front-end/src/containers/Root/components/Footer/components/FooterTopSectionButton/styles.scss
@@ -17,7 +17,7 @@
     }
 
     span {
-      font-size: $small-font-size;
+      font-size: $small-font-size + 1;
     }
 
     @media (max-width: 1510px) {
@@ -27,6 +27,6 @@
 
   .div-footer-top-section-button-separator {
     color: white;
-    font-size: $small-font-size;
+    font-size: $small-font-size + 1;
   }
 }
