[FE] styling fixes

--- a/front-end/src/components/Cart/styles.scss
+++ b/front-end/src/components/Cart/styles.scss
@@ -15,7 +15,7 @@
 
   span {
     color: $green-primary;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 1;
     font-family: 'Montserrat-Bold';
   }
 
