--- a/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
+++ b/front-end/src/containers/Root/components/Header/components/SettingsDropdown/styles.scss
@@ -12,7 +12,7 @@
       }
 
       span {
-        font-size: $mobile-regular-font-size;
+        font-size: $mobile-regular-font-size - 1;
         font-family: 'Montserrat-Medium';
       }
 
