--- a/front-end/src/containers/Settings/components/MealPreferenceItem/styles.scss
+++ b/front-end/src/containers/Settings/components/MealPreferenceItem/styles.scss
@@ -104,12 +104,12 @@
       align-items: center;
       
       .button {
-        width: 95px;
-        height: 24px;
+        width: 115px;
+        height: 35px;
         margin: 0 5px;
-        border-radius: 0;
+        border-radius: 3px;
         box-shadow: $shadow-secondary;
-        font-size: $mobile-regular-font-size - 2;
+        font-size: $small-font-size - 1;
       }
 
       .btn-cancel {
