--- a/front-end/src/containers/Settings/MealPreference/styles.scss
+++ b/front-end/src/containers/Settings/MealPreference/styles.scss
@@ -1,18 +1,9 @@
 @import "../../../styles/variables/variables";
 
 .div-meal-preference-container {
-  margin-top: -100px;
-
-  .div-meal-preference-header {
-    width: 100%;
-    height: 42px;
-    line-height: 42px;
-    background-color: #F1F1F1;
-    border-radius: 9px;
-    font-family: 'Montserrat-SemiBold';
-    color: $text-light-gray;
-    padding-left: 15px;
-  }
+  margin-top: -90px;
+  margin-left: -100px;
+  margin-right: -100px;
 
   .div-meal-preference-items {
     display: flex;
@@ -26,6 +17,11 @@
     }
   }
 
+  @media (max-width: 1366px) {
+    margin: unset;
+    margin-top: -90px;
+  }
+
   @media (max-width: 1024px) {
     .div-meal-preference-items {
       .meal-preference-item {
@@ -35,10 +31,6 @@
   }
 
   @media (max-width: 710px) {
-    .div-meal-preference-header {
-      display: none;
-    }
-
     .div-meal-preference-items {
       .meal-preference-item {
         width: 100%;
