--- a/front-end/src/containers/Authentication/components/AuthForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/AuthForm/styles.scss
@@ -5,6 +5,7 @@
   box-shadow: $shadow-primary;
   padding: 40px 28px;
   color: $text-light-gray;
+  border: 1px solid #B7CBB8;
 
   .span-link {
     color: $green-secondary;
@@ -19,7 +20,7 @@
     justify-content: space-between;
 
     .auth-form-title {
-      font-size: 25px;
+      font-size: 29px;
       font-family: 'Montserrat-SemiBold';
     }
   }
@@ -30,10 +31,10 @@
     line-height: 60px;
 
     .auth-form-title {
-      font-size: 30px;
+      font-size: 29px;
       font-family: 'Montserrat-SemiBold';
       text-align: center;
-      color: $text-primary;
+      color: #4B4B4B;
     }
   }
 
@@ -49,7 +50,7 @@
 
       input {
         width: 100%;
-        height: 53px;
+        height: 52px;
         margin-top: 10px;
         padding: 0 10px;
         border: 1px solid $light-green-primary;
@@ -104,7 +105,7 @@
 
       .span-forgot-password {
         font-size: $mobile-regular-font-size;
-        color: $green-primary;
+        color: $green-secondary;
         margin-right: 10px;
         &:hover {
           text-decoration: underline;
@@ -127,8 +128,8 @@
     }
 
     span {
-      padding: 0 16px;
-      font-size: $mobile-regular-font-size;
+      padding: 0 8px;
+      font-size: $mobile-regular-font-size - 1;
     }
   }
 
