--- a/front-end/src/containers/Home/components/BottomForm/styles.scss
+++ b/front-end/src/containers/Home/components/BottomForm/styles.scss
@@ -8,6 +8,7 @@
     width: 100%;
     text-align: center;
     font-family: 'Montserrat-Medium';
+    font-size: $small-font-size + 1;
     color: #686868;
   }
 
@@ -22,7 +23,7 @@
       border: 1px solid #E1E1E1;
       border-radius: 3px;
       padding: 0 20px;
-      font-size: $small-font-size;
+      font-size: $mobile-regular-font-size;
       font-family: 'Montserrat-Light';
     }
   }
@@ -30,6 +31,7 @@
   .btn-start {
     width: 100%;
     height: 66px;
+    font-size: $small-font-size - 1;
     border-radius: 4px;
     margin-top: 25px;
     margin-bottom: 10px;
@@ -38,7 +40,7 @@
   .bottom-form-link {
     width: 100%;
     text-align: center;
-    font-size: $mobile-regular-font-size;
+    font-size: $mobile-regular-font-size - 1;
     color: #2E2E2E;
     margin-top: 5px;
 
