--- a/front-end/src/containers/Home/components/Feedback/styles.scss
+++ b/front-end/src/containers/Home/components/Feedback/styles.scss
@@ -13,7 +13,7 @@
   background-color: $bg-gray;
   border: 1px solid $border-gray;
   border-radius: 4px;
-  padding: 40px 40px 30px 40px;
+  padding: 30px 40px 30px 25px;
 
   .div-feedback-star {
     display: flex;
@@ -26,8 +26,8 @@
 
 .div-feedback {
   position: relative;
-  width: 574px;
-  height: 240px;
+  width: 530px;
+  height: 210px;
   display: inline-block;
   margin: 20px;
 
@@ -54,20 +54,16 @@
       
       .div-feedback-name {
         color: $text-light-gray;
-        font-size: $regular-font-size;
+        font-size: $small-font-size - 1;
       }
     }
 
     .div-feedback-content {
       color: $text-light-gray;
-      font-size: $mobile-regular-font-size;
-      // margin-right: 30px;
-      // margin-top: 20px;
+      font-size: $mobile-regular-font-size - 1;
       overflow: hidden;
       text-align: left;
-      margin: auto;
-      margin-top: 20px;
-      margin-right: 20px;
+      margin: 20px 20px 0 0;
     }
   }
 }
