--- a/front-end/src/styles/_fonts.scss
+++ b/front-end/src/styles/_fonts.scss
@@ -47,3 +47,24 @@
   font-family: 'Inkfree';
   src: url('../assets/fonts/Inky/Inkfree.ttf');
 }
+
+@font-face {
+  font-family: 'OpenSans-Regular';
+  src: url('../assets/fonts/OpenSans/OpenSans-Regular.ttf');
+}
+
+@font-face {
+  font-family: 'OpenSans-Light';
+  src: url('../assets/fonts/OpenSans/OpenSans-Light.ttf');
+}
+
+
+@font-face {
+  font-family: 'OpenSans-Semibold';
+  src: url('../assets/fonts/OpenSans/OpenSans-Semibold.ttf');
+}
+
+@font-face {
+  font-family: 'OpenSans-Bold';
+  src: url('../assets/fonts/OpenSans/OpenSans-Bold.ttf');
+}
