--- a/front-end/src/containers/Authentication/components/AuthForm/styles.scss
+++ b/front-end/src/containers/Authentication/components/AuthForm/styles.scss
@@ -142,6 +142,7 @@
     text-align: center;
     margin-top: 20px;
     font-size: $mobile-regular-font-size;
+    font-family: 'OpenSans-Regular';
 
     .auth-form-footer-signup {
       margin-top: 20px;
