--- a/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
+++ b/front-end/src/containers/Home/components/FeaturedMenu/styles.scss
@@ -29,7 +29,7 @@
       flex-direction: column;
       justify-content: space-between;
       flex-grow: 1;
-      font-size: $small-font-size;
+      font-size: $small-font-size - 1;
   
       .div-featured-menu-name {
         text-align: left;
@@ -57,7 +57,7 @@
       justify-content: space-between;
       height: 65px;
       padding: 5px;
-      font-size: $small-font-size;
+      font-size: $small-font-size - 1;
   
       .div-price {
         background-color: $bg-gray;
