--- a/front-end/src/containers/Settings/components/SettingsMenu/styles.scss
+++ b/front-end/src/containers/Settings/components/SettingsMenu/styles.scss
@@ -16,6 +16,7 @@
     width: 25%;
     line-height: 60px;
     margin-bottom: -2px;
+    font-size: $small-font-size + 1;
   }
 
   .settings-menu-item-underline  {
