--- a/front-end/src/containers/Settings/EditProfile/styles.scss
+++ b/front-end/src/containers/Settings/EditProfile/styles.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/variables/variables";
 
 .div-edit-profile-container {
-  width: 560px;
+  width: 630px;
   margin: 0 auto;
 
   .div-profile-info {
@@ -29,39 +29,33 @@
         color: $green-primary;
         font-size: $small-font-size;
       }
+    }
 
-      .div-profile-update-password-inputs {
+    .div-profile-info-input-list {
+      margin-top: -15px;
+
+      input {
+        width: 100%;
+        height: 50px;
+        border: 1px solid rgba(112, 112, 112, 0.38);
+        box-shadow: $shadow-primary;
+        padding: 0 15px;
+        font-size: $small-font-size;
+        color: $text-light-gray;
+        margin-bottom: 20px;
+      }
+
+      .div-profile-info-double-input {
         display: flex;
-        align-items: flex-end;
-  
-        .div-profile-update-password-input {
-          .div-profile-update-password-input-title {
-            color: $text-light-gray;
-            font-size: $mobile-regular-font-size;
-          }
-  
-          input {
-            width: 220px;
-            height: 43px;
-            margin-top: 5px;
-            margin-right: 30px;
-            padding: 10px;
-            border: 1px solid $light-green-primary;
-            border-radius: 2px;
-            caret-color: $green-primary;
-    
-            &:focus {
-              border: 1px solid $green-primary;
-            }
-          }
+        justify-content: space-between;
+
+        input {
+          width: calc(50% - 5px);
         }
-  
-        .button {
-          width: 116px;
-          height: 43px;
-          border-radius: 3px;
-          font-size: $mobile-regular-font-size;
-        }
+      }
+      
+      .div-profile-info-input {
+
       }
     }
   }
