--- a/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
+++ b/front-end/src/containers/HowItWorks/components/MealPlan/styles.scss
@@ -27,7 +27,7 @@
     }
 
     .span-subtitle2 {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size - 1;
       color: $text-light-gray;
     }
   }
