--- a/front-end/src/containers/HowItWorks/styles.scss
+++ b/front-end/src/containers/HowItWorks/styles.scss
@@ -11,8 +11,8 @@
       position: relative;
       max-width: 600px;
       text-align: center;
-      font-size: 34px;
-      font-family: 'Montserrat-Bold';
+      font-size: 31px;
+      font-family: 'Montserrat-SemiBold';
       left: 50%;
       top: 80px;
       transform: translate(-50%);
