--- a/front-end/src/containers/Home/components/LocationSearchField/styles.scss
+++ b/front-end/src/containers/Home/components/LocationSearchField/styles.scss
@@ -32,11 +32,14 @@
     border: 1px solid $border-gray;
     margin-right: 6px;
     max-width: 150px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
     img {
       width: 16.5px;
       height: 16.5px;
-      margin-right: 5px;
+      margin-right: 10px;
     }
 
     span {
