--- a/front-end/src/containers/Settings/components/OrderHistoryItem/styles.scss
+++ b/front-end/src/containers/Settings/components/OrderHistoryItem/styles.scss
@@ -21,9 +21,12 @@
       padding-left: 25px;
 
       .img-item {
-        width: 91px;
-        height: 83px;
+        width: 90px;
+        height: 90px;
         margin-right: 5px;
+        border-radius: 45px;
+        overflow: hidden;
+        flex-shrink: 0;
       }
 
       .order-history-item-info {
@@ -88,9 +91,11 @@
       display: flex;
 
       .img-item {
-        width: 83px;
-        height: 83px;
-        border-radius: 42px;
+        width: 80px;
+        height: 80px;
+        border-radius: 40px;
+        flex-shrink: 0;
+        overflow: hidden;
         margin-right: 20px;
       }
 
