[FE] replace menu gif.  style fixes on menu header

--- a/front-end/src/containers/Menus/components/MenuFilter/styles.scss
+++ b/front-end/src/containers/Menus/components/MenuFilter/styles.scss
@@ -3,7 +3,7 @@
 .menu-filter {
   .dropdown__trigger {
     .menu-filter-dropdown-trigger {
-      font-size: $regular-font-size;
+      font-size: $mobile-regular-font-size;
       color: $text-light-gray;
 
       .img-filter {
