--- a/front-end/src/containers/Menus/components/MenusHeader/styles.scss
+++ b/front-end/src/containers/Menus/components/MenusHeader/styles.scss
@@ -4,9 +4,10 @@
   position: fixed;
   left: 0;
   right: 0;
-  height: 78px;
+  height: 70px;
   z-index: $zindex-menu-header;
   background-color: $extra-light-green;
+  border: 1px solid #70707080;
   transition: all ease-out 0.1s;
 
   display: flex;
@@ -17,8 +18,8 @@
 
   .div-separator {
     width: 1px;
-    height: 43px;
-    background-color: #D1CDCD;
+    height: 30px;
+    background-color: $text-light-gray;
     margin: 0 40px;
   }
 
@@ -29,7 +30,7 @@
     align-items: center;
     
     .span-title {
-      font-size: $mobile-regular-font-size;
+      font-size: $mobile-regular-font-size - 1;
       color: $text-light-gray;
       margin-left: 10px;
     }
@@ -46,24 +47,24 @@
     .div-search-container {
       margin-left: 35px;
       width: 325px;
-      height: 52px;
-      padding: 16px;
+      height: 40px;
+      padding: 0 25px 0 15px;
       display: flex;
       align-items: center;
       background: white;
-      border-radius: 6px;
+      border-radius: 4px;
       border: 1px solid #54595480;
 
       input {
         width: 100%;
         flex-grow: 1;
-        font-size: $mobile-regular-font-size;
+        font-size: $mobile-regular-font-size - 1.5;
         color: #545954;
         caret-color: $green-primary;
       }
 
       img {
-        height: 21px;
+        height: 17px;
       }
     }
 
@@ -73,19 +74,19 @@
       margin-right: 35px;
 
       img {
-        height: 25px;
+        height: 22px;
         margin-right: 5px;
       }
 
       .div-zip-code-description {
         color: #3D403F;
         font-family: 'Montserrat-Bold';
-        font-size: $mobile-regular-font-size + 1;
+        font-size: $mobile-regular-font-size - 1;
       }
       .div-zip-code-info {
         color: #3D403F;
         margin-top: -5px;
-        font-size: $mobile-regular-font-size;
+        font-size: $mobile-regular-font-size - 1;
       }
     }
   }
